linter/src/snapshots/linter__rules__test_rules__adding_field_with_default.snap
---
source: linter/src/rules.rs
expression: "check_sql(bad_sql, &[])"
---
Ok(
    [
        RuleViolation {
            kind: AddingFieldWithDefault,
            span: Span {
                start: 0,
                len: Some(
                    76,
                ),
            },
            messages: [
                Note(
                    "In Postgres versions <11 adding a field with a DEFAULT requires a table rewrite with an ACCESS EXCLUSIVE lock.",
                ),
                Help(
                    "Add the field as nullable, then set a default, backfill, and remove nullabilty.",
                ),
            ],
        },
    ],
)
