linter/src/snapshots/linter__rules__test_rules__renaming_table.snap
---
source: linter/src/rules.rs
expression: "check_sql(sql, &[])"
---
Ok(
    [
        RuleViolation {
            kind: RenamingTable,
            span: Span {
                start: 0,
                len: Some(
                    52,
                ),
            },
            messages: [
                Note(
                    "Renaming a table may break existing clients.",
                ),
            ],
        },
    ],
)
